; ModuleID = '/home/carl/AnghaBench/sumatrapdf/mupdf/source/pdf/extr_pdf-object.c_pdf_dict_del.c'
source_filename = "/home/carl/AnghaBench/sumatrapdf/mupdf/source/pdf/extr_pdf-object.c_pdf_dict_del.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32 }

@FZ_ERROR_GENERIC = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [23 x i8] c"key is not a name (%s)\00", align 1
@PDF_LIMIT = common dso_local global i32* null, align 8
@PDF_NAME_LIST = common dso_local global i32* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @pdf_dict_del(i32* %0, i32* %1, i32* %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32*, align 8
  store i32* %0, i32** %4, align 8
  store i32* %1, i32** %5, align 8
  store i32* %2, i32** %6, align 8
  %7 = load i32*, i32** %6, align 8
  %8 = call i32 @OBJ_IS_NAME(i32* %7)
  %9 = icmp ne i32 %8, 0
  br i1 %9, label %16, label %10

10:                                               ; preds = %3
  %11 = load i32*, i32** %4, align 8
  %12 = load i32, i32* @FZ_ERROR_GENERIC, align 4
  %13 = load i32*, i32** %6, align 8
  %14 = call i32 @pdf_objkindstr(i32* %13)
  %15 = call i32 @fz_throw(i32* %11, i32 %12, i8* getelementptr inbounds ([23 x i8], [23 x i8]* @.str, i64 0, i64 0), i32 %14)
  br label %16

16:                                               ; preds = %10, %3
  %17 = load i32*, i32** %6, align 8
  %18 = load i32*, i32** @PDF_LIMIT, align 8
  %19 = icmp ult i32* %17, %18
  br i1 %19, label %20, label %29

20:                                               ; preds = %16
  %21 = load i32*, i32** %4, align 8
  %22 = load i32*, i32** %5, align 8
  %23 = load i32*, i32** @PDF_NAME_LIST, align 8
  %24 = load i32*, i32** %6, align 8
  %25 = ptrtoint i32* %24 to i64
  %26 = getelementptr inbounds i32, i32* %23, i64 %25
  %27 = load i32, i32* %26, align 4
  %28 = call i32 @pdf_dict_dels(i32* %21, i32* %22, i32 %27)
  br label %37

29:                                               ; preds = %16
  %30 = load i32*, i32** %4, align 8
  %31 = load i32*, i32** %5, align 8
  %32 = load i32*, i32** %6, align 8
  %33 = call %struct.TYPE_2__* @NAME(i32* %32)
  %34 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %33, i32 0, i32 0
  %35 = load i32, i32* %34, align 4
  %36 = call i32 @pdf_dict_dels(i32* %30, i32* %31, i32 %35)
  br label %37

37:                                               ; preds = %29, %20
  ret void
}

declare dso_local i32 @OBJ_IS_NAME(i32*) #1

declare dso_local i32 @fz_throw(i32*, i32, i8*, i32) #1

declare dso_local i32 @pdf_objkindstr(i32*) #1

declare dso_local i32 @pdf_dict_dels(i32*, i32*, i32) #1

declare dso_local %struct.TYPE_2__* @NAME(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
